# ee6470_hw4

./: README.md
sw-gaussian/: Makefile  main  main.cpp
vp-basic-hw/: CMakeLists.txt  SobelFilter.h  filter_def.h
